Testing guava removal and code cleanup